--- a/IDM-18-05/readme.html
+++ b/IDM-18-05/readme.html
@@ -1,3 +1,3 @@
 
 Для успешной сдачи лабораторных работам и проекта студентам предлагается создание личной страницы, на которой будут размещаться отчеты по результатам всех лабораторных работ и проекта.
-Предлагается использовать бесплатный хостинг от GitHub. Советую [ознакомиться с инструкцией.](https://htmlacademy.ru/blog/99-github-as-hosting)
+Предлагается использовать бесплатный хостинг от GitHub. Советую .[ознакомиться с инструкцией.](https://htmlacademy.ru/blog/99-github-as-hosting)
