--- a/IDM-18-05/Gurov/index.html
+++ b/IDM-18-05/Gurov/index.html
@@ -1,1 +1,75 @@
-Hello Word!!!
+<html>
+
+   <head>
+
+      <title> Главная </title>
+
+   </head>
+
+   <body bgcolor="#aad5f7">
+
+     <table border="0" cellpadding="0" cellspacing="0"
+            align="center">
+
+     <tr>
+       <td  colspan="2" width="780" height="165"
+            background="images/header.jpg">
+       </td>
+     </tr>
+
+     <tr>
+       <td  colspan="2" width="780" height="38"
+            background="images/menu.jpg">
+
+          <table border="0"  cellpadding="5" cellspacing="0">
+               <tr><td>
+                 <font  color="#FFFFFF" size="5">
+                   Teleegram(bots) || Диаграмма || Cisco
+                 </font>
+               </td></tr>
+          </table>
+
+       </td>
+     </tr>
+
+     <tr>
+       <td  colspan="2" width="780" height="33"
+            background="images/news.jpg">
+       </td>
+     </tr>
+
+     <tr>
+       <td width="200" height="320" bgcolor="#CCCCCC"
+           valign="top">
+
+         <table border="0"  cellpadding="10" cellspacing="0">
+               <tr><td>
+ 
+              </td></tr>
+         </table>
+          
+       </td>
+       <td width="580" height="320" bgcolor="#FFFFFF"
+           valign="top">
+
+        <table border="0"  cellpadding="15" cellspacing="0">
+         <tr><td>
+		  <iframe id="tgw_5bb33f7e83ba883e4d8b4567" frameborder="0" scrolling="no" horizontalscrolling="no" verticalscrolling="no" width="100%" height="540px" async></iframe><script>document.addEventListener("DOMContentLoaded",function(){document.getElementById("tgw_5bb33f7e83ba883e4d8b4567").setAttribute("src","https://tgwidget.com/channel/v2.0/?id=5bb33f7e83ba883e4d8b4567")})</script>
+         </td></tr>
+        </table>
+        
+       </td>
+     </tr>
+
+     <tr>
+       <td  colspan="2" width="780" height="38"
+            background="images/footer.jpg" align="right">
+            ИДМ-18-05 © 2018
+       </td>
+     </tr>
+
+    </table>
+
+   </body>
+
+</html>
