--- a/IDM-18-04/Tokunova/index.html
+++ b/IDM-18-04/Tokunova/index.html
@@ -15,9 +15,10 @@
 <div class="d4">
 <nav>
   <ul>
-	<li><a href="#">Отчет 1</a></li>
-    <li><a href="#">Отчет 2</a></li>
-    <li><a href="#">Отчет 3</a></li>
+    <li><a href="index.html" class="z">Главная</a></li>
+	<li><a href="lab1.html">Отчет 1</a></li>
+    <li><a href="lab2.html">Отчет 2</a></li>
+    <li><a href="lab3.html">Отчет 3</a></li>
   </ul>
 </nav>
 
@@ -29,14 +30,14 @@
 				<small>Отчет по лабораторной работе №1</small>
 				<hr>
 				<span class="t2">
-				<ol>
+				<ul>
 				<li>Регистрация на GitHub.</li>
 				<li>Подключиться к репозиторию.</li>
  				<li>Создать личную страницу.</li>
  				<li>Создать персональную веб страницу-отчет с использованием html, css, js.</li>
  				<li>Загрузить персональную веб страницу-отчет в репозиторий ИДМ-18-04 по курсу "Интернет-технологии" на GitHub.</li>
- 				</ol>	
-				<p align="right"><a href="#">Читать отчет</a></p>
+ 				</ul>	
+				<p align="right"><a href="lab1.html">Читать отчет</a></p>
 				</span>
 			</div>
 		</div>
@@ -47,21 +48,26 @@
 				<p class="t3"><span>Разбиение на группы. Выбор темы для самостоятельного проекта. Написание ответа на билет №23 в виде статьи на wiki-странице</span></p>
 				<small>Отчет по лабораторной работе №2</small>
 				<hr>
-				<p>Введение</p>
-				<p>Основная часть</p>
-				<p>Заключение</p>
+				<p></p>
+				<p class="t2">Разделились на группы</p>
+				<p class="t2">Выбрали тему проекта</p>
+				<p class="t2">Написали ответ на 23 билет</p>
+				<p align="right" class="t2"><a href="lab2.html">Читать отчет</a></p>
 			</div>
 		</div>
 	</div>
 	<div class="parent--el">
 		<div class="is-item has--content">
 			<div class="is-item--inner">
-				<h1><span>Название отчета</span></h1>
+				<p class="t3">Сетевые технологии</p>
 				<small>Отчет по лабораторной работе №3</small>
 				<hr>
-				<p>Введение</p>
-				<p>Основная часть</p>
-				<p>Заключение</p>
+				<p></p>
+				<p class="t2">Был размещён на рабочем поле коммутатор и два компьютера.</p>
+				<p class="t2">Подключен консольный кабель.</p>
+				<p class="t2">Настроена адресацию на добавленных компьютерах без шлюза по умолчанию.</p>
+				<p class="t2">Даны пояснения.</p>
+				<p align="right" class="t2"><a href="lab3.html">Читать отчет</a></p>
 			</div>
 		</div>
 	</div>
