--- a/IDM-18-05/Shlaev/project/InetTech/index.html
+++ b/IDM-18-05/Shlaev/project/InetTech/index.html
@@ -59,12 +59,12 @@
             <br/>
             <p>2.   Создать персональную веб-страниицу </p>
             <br/>
-            <a href="https://stankin.github.io/inet-2018/idm-18-05/Shlaev/index.html">Персональная страница</a>
+            <a href="https://ViktorShlaev.github.io/inet-2018/tree/master/IDM-18-05/Shlaev/project/InetTech/index.html">Персональная страница</a>
             <br/>
             <br/>
             <p>Загрузить персональную веб страницу-отчет в репозиторий ИДМ-18 по курсу "Интернет-технологии" на GitHub.</p>
             <br/>
-            <a href="https://github.com/stankin/inet-2018/tree/master/IDM-18-05/Shlaev">Файлы проекта</a>
+            <a href="https://github.com/ViktorShlaev/inet-2018/tree/master/IDM-18-05/Shlaev/project/InetTech">Файлы проекта</a>
         </div>
 
     <p class="title" onclick="is_show('second_lr',isShow1)">Вторая лабораторная</p>
