--- a/IDM-18-05/Shlaev/project/InetTech/index.html
+++ b/IDM-18-05/Shlaev/project/InetTech/index.html
@@ -59,7 +59,7 @@
             <br/>
             <p>2.   Создать персональную веб-страниицу </p>
             <br/>
-            <a href="https://ViktorShlaev.github.io/inet-2018/tree/master/IDM-18-05/Shlaev/project/InetTech/index.html">Персональная страница</a>
+            <a href="https://stankin.github.io/inet-2018/IDM-18-05/Shlaev/project/InetTech/index.html">Персональная страница</a>
             <br/>
             <br/>
             <p>Загрузить персональную веб страницу-отчет в репозиторий ИДМ-18 по курсу "Интернет-технологии" на GitHub.</p>
