--- a/IDM-18-05/Shlaev/project/InetTech/index.html
+++ b/IDM-18-05/Shlaev/project/InetTech/index.html
@@ -42,6 +42,11 @@
         <p>6.   Технический проект. </p>
         <p>7.   Рабочая документация. </p>
         <p>8.   Техническое задание. </p>
+        <br/>
+        <br/>
+        <h5>Подготовлен экзаменационный билет номер 4</h5>
+        <br/>
+        <a href="https://github.com/stankin/inet-2018/wiki/%D0%91%D0%B8%D0%BB%D0%B5%D1%82-4">Билет 4</a>
     </div>
 
     <p class="title" onclick="is_show('first_lr',isShow)"> Первая лабораторная </p>
@@ -59,7 +64,7 @@
             <br/>
             <p>2.   Создать персональную веб-страниицу </p>
             <br/>
-            <a href="https://stankin.github.io/inet-2018/IDM-18-05/Shlaev/project/InetTech/index.html">Персональная страница</a>
+            <a href="https://viktorshlaev.github.io/">Персональная страница</a>
             <br/>
             <br/>
             <p>Загрузить персональную веб страницу-отчет в репозиторий ИДМ-18 по курсу "Интернет-технологии" на GitHub.</p>
