--- a/IDM-18-05/Vasilev/index.html
+++ b/IDM-18-05/Vasilev/index.html
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="index.html">Лабораторные</a>
-          <a class="navbar-brand" href="#">Экзамен</a>
+          <a class="navbar-brand" href="https://github.com/stankin/inet-2018/wiki/%D0%91%D0%B8%D0%BB%D0%B5%D1%82-4">Экзамен</a>
         </div>
       </div>
     </nav>
@@ -44,7 +44,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Интернет-технологии</h1>
-        <p>Данная страница является личной страницей студента ИДМ-18-05 Васильева Дмитрия. Здесь Вы можете найти отчеты по лабораторным работам, которые были проделанным в течении курса, а также ответы на вопросы, как подготовку к экзамену.</p>
+        <p>Данная страница является личной страницей студента ИДМ-18-05 Васильева Дмитрия. Здесь Вы можете найти отчеты по лабораторным работам, которые были выполнены в течении курса, а также ответы на вопросы, как подготовку к экзамену.</p>
       </div>
     </div>
 
