--- a/IDM-18-05/Vasilev/laba1.html
+++ b/IDM-18-05/Vasilev/laba1.html
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="index.html">Лабораторные</a>
-          <a class="navbar-brand" href="#">Экзамен</a>
+          <a class="navbar-brand" href="https://github.com/stankin/inet-2018/wiki/%D0%91%D0%B8%D0%BB%D0%B5%D1%82-4">Экзамен</a>
         </div>
       </div>
     </nav>
@@ -55,7 +55,7 @@
 		<ol>
               		<li>Зарегистрироваться на GitHub: <a href="https://github.com/DimitriiVasilev">DimitriiVasilev</a></li>
               		<li>Создать персональную веб страницу-отчет с использованием html, css, js: 
-							<a href=index.html>Отчет</a></li>
+							<a href=https://dimitriivasilev.github.io/index.html>Отчет</a></li>
               		<li>Загрузить персональную веб страницу-отчет в репозиторий ИДМ-17 по курсу "Интернет-технологии" на GitHub:
 				<a href=https://github.com/stankin/inet-2018/tree/master/IDM-18-05/Vasilev>Репозиторий</a></li></li>
             	</ol>     	
