--- a/IDM-18-05/Vasilev/laba2.html
+++ b/IDM-18-05/Vasilev/laba2.html
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="index.html">Лабораторные</a>
-          <a class="navbar-brand" href="#">Экзамен</a>
+          <a class="navbar-brand" href="https://github.com/stankin/inet-2018/wiki/%D0%91%D0%B8%D0%BB%D0%B5%D1%82-4">Экзамен</a>
         </div>
       </div>
     </nav>
