--- a/IDM-18-05/Vasilev/laba3.html
+++ b/IDM-18-05/Vasilev/laba3.html
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="index.html">Лабораторные</a>
-          <a class="navbar-brand" href="#">Экзамен</a>
+          <a class="navbar-brand" href="https://github.com/stankin/inet-2018/wiki/%D0%91%D0%B8%D0%BB%D0%B5%D1%82-4">Экзамен</a>
         </div>
       </div>
     </nav>
@@ -75,8 +75,35 @@
 			<li>Проверить работу удаленного подключения</li>
 		</ol>
 		<div>
-			<p>Результаты:</p>
-			<img src="cisco.png" class="img-thumbnail">
+			<p><h4>Ход работы:</h4></p>
+			<ol>
+				<li>
+					Рассчитаем IP-адреса согласно выбранному варианту
+					<div><img src="variant7.png" class="img-thumbnail"></div>
+				</li>
+				<li>Разместим два компьютера и коммутатор,настроить между ними адресацию. Убедиться, что все работает</li>
+				<li>
+					Добавим еще коммутатор с двумя компьютерами и маршрутизаторы. Проведем необходимые настройки и 
+					проверим работоспособность <div><img src="cisco.png" class="img-thumbnail"></div>
+				</li>
+				<li>
+					Настроим статическую маршрутизацию при помощи следующих команд:
+					<div>
+						<p>Команды привилегированного режима // router#</p>
+						<ul>show ip route – выводит таблицу маршрутизации</ul>
+						<ul>show ip protocols – выводит расширенную информацию об используемых 
+							протоколах маршрутизации.</ul>
+					</div>
+					<div>
+						<p>Команды режима глобального конфигурирования // router(config)#</p>
+						<ul>ip route [сеть назначения] [маска] [маршрут] – добавляет в таблицу маршрутизации статический маршрут до указанной сети назначения. Маршрут может быть задан в виде исходящего интерфейса и/или (предпочтительно!) адреса next hop (IP-адреса входящего интерфейса следующего маршрутизатора на маршруте).</ul>
+					</div>
+				</li>
+				<li>
+					Установим банер на сетевое оборудование:
+					<ul>Banner motd [баннер] – определяет баннерное сообщение</ul>
+				</li>
+			</ol>
 		</div>
 	</div>
      </div>
