--- a/IDM-18-05/Gurov/index.html
+++ b/IDM-18-05/Gurov/index.html
@@ -32,7 +32,7 @@
 							<li><a href="#section-linetriangle-2"><span>Диаграмма</span></a></li>
 							<li><a href="#section-linetriangle-3"><span>CPT</span></a></li>
 							<li><a href="#section-linetriangle-4"><span>О себе</span></a></li>
-							<li><a href="#section-linetriangle-5"><span>Разное</span></a></li>					
+							<li><a href="#section-linetriangle-5"><span>О проекте</span></a></li>					
 						</ul>
 					</nav>
 					<div class="content-wrap">
@@ -214,14 +214,14 @@
 		<ol>
 			<li> Гуров Иван, студентк гр. ИДМ-18-05. <a href="">Персональная страница.</a>
 		</li>
-		<li> Барбашева Полина, студентка гр. ИДМ-18-05. <a href="">Персональная страница.</a>
+		<li> Барбашова Полина, студентка гр. ИДМ-18-05. <a href="">Персональная страница.</a>
 		</li>
 		<li> Минибаев Артем, студент гр. ИДМ-18-05. <a href="">Персональная страница.</a>
 		</li>
 		</ol>
-		 Описание приложения: Приложение будет строить круговую диаграмму, а telegram бот позволит узнать для чего они используются.
-        <p align=center> Требования к приложению:
-        </p>
+		 Описание приложения: Приложение будет строить круговую диаграмму, а telegram бот позволит узнать для чего они используются.<br>
+         <b>Требования к приложению:</b><br>
+      
 		<ol>
 			<li> Создать форму для отображения приложения.
 		</li>
