--- a/IDM-18-04/Shulenina/index.html
+++ b/IDM-18-04/Shulenina/index.html
@@ -1,1 +1,473 @@
+<html>
+<head>
+ <meta http-equiv="content-type" content="text/html; charset=ansi" />
+ <title>Шуленина А.В. Отчет</title></head>
+ <style>
+	 .box {
+	width: 1100px;
+	margin: 25px auto;
+	background: linear-gradient(to top,#d2d2d2,#acd7e5);
+	border: 1px solid #d1d1d1;
+	padding: 4px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-box-shadow: 0px 0px 10px #ddd;
+	-webkit-box-shadow: 0px 0px 10px #ddd;}
+	 
+	 .box4 {
+	width: 900px;
+	margin: 25px auto;
+	background: linear-gradient(to top,#d2d2d2,#acd7e5);
+	border: 1px solid #d1d1d1;
+	padding: 4px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-box-shadow: 0px 0px 10px #ddd;
+	 -webkit-box-shadow: 0px 0px 10px #ddd;}
+	 .box1
+	 {
+	width: 300px;
+	margin-left: 75%;
+	background: linear-gradient(to top,#d3d3d3,#add8e6);
+	border: 1px solid #d1d1d1;
+	padding: 4px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-box-shadow: 0px 0px 10px #ddd;
+	-webkit-box-shadow: 0px 0px 10px #ddd;
+	 }
+	  .box3
+	 {
+	width: 1250px;
+	margin: 25px auto;
+	background: linear-gradient(to top #add8e6,#d3d3d3);
+	border: 1px solid #d1d1d1;
+	padding: 4px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-box-shadow: 0px 0px 10px #ddd;
+	-webkit-box-shadow: 0px 0px 10px #ddd;
+	 }
+canvas {
+    border:1px solid #d3d3d3;
+    background-color: #f1f1f1;
+}
+  body
+{ margin-left: 50px;
+  margin-right: 50px;
+  background: linear-gradient(to top,#d3d3d3,#add8e6);}
+    A:link
+{text-decoration:none;
+color:blue;}
+A:visited
+{text-decoration:none;
+color:black;}
+A:hover
+{color:white;}
 
+#slides{
+	position: relative;
+	height: 350px;
+	width: 650px;
+	padding: 0px;
+	margin: 0px;
+	list-style-type: none;
+}
+
+.slide{
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	z-index: 1;
+	-webkit-transition: opacity 1s;
+	-moz-transition: opacity 1s;
+	-o-transition: opacity 1s;
+	transition: opacity 1s;
+}
+
+.showing{
+	opacity: 1;
+	z-index: 2;
+}
+
+.controls{
+	display: none;
+}
+
+.slide{
+	font-size: 40px;
+	padding: 40px;
+	box-sizing: border-box;
+	background: #333;
+	color: #fff;
+  
+  background-size: cover;
+}
+.slide:nth-of-type(1){
+	background-color: #add8e6;
+  background-image: url ('https://asay1515.github.io/slides/01.JPG');
+}
+.slide:nth-of-type(2){
+	background-color: orange;
+  background-image: url('https://asay1515.github.io/slides/01.JPG');
+}
+.slide:nth-of-type(3){
+	background-color: green;
+  background-image: url('https://asay1515.github.io/slides/02.JPG');
+}
+	 .slide:nth-of-type(4){
+	background-color: blue;
+  background-image: url('https://asay1515.github.io/slides/03.JPG');
+}
+	 .slide:nth-of-type(5){
+	background-color: green;
+  background-image: url('https://asay1515.github.io/slides/04.JPG');
+}
+	 .slide:nth-of-type(6){
+	background-color: green;
+  background-image: url('https://asay1515.github.io/slides/05.JPG');
+}
+	 .slide:nth-of-type(7){
+	background-color: green;
+  background-image: url('https://asay1515.github.io/slides/06.JPG');
+}
+	 .slide:nth-of-type(8){
+	background-color: green;
+  background-image: url('https://asay1515.github.io/slides/07.JPG');
+}
+	 .slide:nth-of-type(9){
+	background-color: green;
+  background-image: url('https://asay1515.github.io/slides/08.JPG');
+}
+	 .slide:nth-of-type(10){
+	background-color: green;
+  background-image: url('https://asay1515.github.io/slides/09.JPG');
+}
+	 .slide:nth-of-type(11){
+	background-color: green;
+  background-image: url('https://asay1515.github.io/slides/10.JPG');
+}
+	 .slide:nth-of-type(12){
+	background-color: green;
+  background-image: url('https://asay1515.github.io/slides/11.JPG');
+}
+	 .slide:nth-of-type(13){
+	background-color: green;
+  background-image: url('https://asay1515.github.io/slides/12.JPG');
+}
+	 .slide:nth-of-type(14){
+	background-color: green;
+  background-image: url('https://asay1515.github.io/slides/13.JPG');
+}
+	 .slide:nth-of-type(15){
+	background-color: green;
+  background-image: url('https://asay1515.github.io/slides/14.JPG');
+}
+	 .slide:nth-of-type(16){
+	background-color: green;
+  background-image: url('https://asay1515.github.io/slides/15.JPG');
+}
+	 .slide:nth-of-type(17){
+	background-color: green;
+  background-image: url('https://asay1515.github.io/slides/16.JPG');
+}
+	 .slide:nth-of-type(18){
+	background-color: green;
+  background-image: url('https://asay1515.github.io/slides/17.JPG');
+}
+
+.controls{
+  background: #333;
+  color: #fff;
+  border: none;
+  padding: 20px 0px;
+  font-size: 20px;
+  cursor: pointer;
+  border: 2px solid #fff;
+  margin: 10px 0px 0px 10px;
+  width: 70px;
+}
+.controls:hover,
+.controls:focus{
+  background: #eee;
+  color: #333;
+}
+.container{
+  position: relative;
+}
+.buttons{
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: 10;
+  font-size: 0px;
+}
+</style>
+<body>
+<div class="box3">	
+ <h1><center>Моя страница-отчет</center></h1>
+	</div>
+	<div class="box1">
+  <h4>Дисциплина: Интернет-технологии</h4>
+  <h4>Студент: Шуленина А.В.</h4>
+  <h4>Группа: ИДМ-18-04</h4>
+ </div>
+ 
+<div width=50% align="left">
+	<div class="box">
+ <h1 align="center">Лабораторная работа 1</h1>
+ <h4>Задачи:</h4>
+ <ol>
+   <li>Зарегистрироваться на GitHub;</li>
+   <li>Вставить ссылки на материалы прошлого семестра</li>
+   <li>Подключиться к общему репозиторию Inet-2018;</li>
+   <li>Разработать личную страницу-отчет;</li>
+   <li>Написать wiki-статью по 10 билету 2 вопрос.</li>
+ </ol>
+   <h4>Выполнение работы:</h4>
+    <ol>
+      <li>Создана <a href="https://github.com/asay1515">страница пользователя</a> на GitHub;</li>
+      <li>Страница прошлого года была удалена;</li>
+      <li><a href="https://github.com/asay1515/asay1515.github.io/wiki/%D0%98%D0%BD%D0%B4%D0%B8%D0%B2%D0%B8%D0%B4%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D0%BE%D0%B5-%D0%B7%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5:-%D0%94%D0%B8%D0%B0%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B0-%D0%BF%D1%80%D0%B5%D1%86%D0%B5%D0%B4%D0%B5%D0%BD%D1%82%D0%BE%D0%B2-UML">Ссылка на статью прошлого года</a></li>
+      <li>Разработа <a href="https://asay1515.github.io/index.html">страница-отчет</a>;</li>
+      <li>Страница выгружена в <a href="https://github.com/stankin/inet-2018/tree/master/IDM-18-04/Shulenina">общий репозиторий</a>.</li>
+      <li>Написана <a href="https://github.com/stankin/inet-2018/wiki/%D0%91%D0%B8%D0%BB%D0%B5%D1%82-10">статья wiki</a> по теме 2 вопроса 10 билета "Понятие активного и пассивного сетевого оборудования"</li>
+</ol>
+ </div>
+
+ <hr>
+	<div class="box">
+  <h1 align="center">Лабораторная работа 2</h1>
+ <ol>
+  <h4>Задачи:</h4>
+   <li>Сформировать команду для разработки проекта;</li>
+   <li>Определить роли команды;</li>
+   <li>Разработать прототип приложения.</li>
+	</ol>
+	 <h4>Выполнение:</h4>
+	 <ol>
+<li>Команда была сформирована из трех человек: <a href="https://github.com/chyogurt">Яцунь Инна</a>,<a href="https://github.com/keklgar">Матвеев Антон</a> и <a href="https://github.com/asay1515">Шуленина Анастасия.</a></li>
+		 <li>Коллективным решением было придумано название команды "НеСуперБобры".</li>
+		 <li>По результатам теста Белбина я коллективист, но в условиях нашей команды мне пришлось исполнять роль программиста системного и прикладного. Матвеев А.С. занимался внедрением, научными исследованиями и бизнес анализом, а Яцунь И.В. управлением проектом, администрированием и консалтингом.</li>
+		 <li>Было принято решение - разработать макет Цензор-бота. Данный прототип отслеживает появление нецензурной лексики и не пропускает комментарии при ее наличии, при повторном нарушении правил участник блокируется на 15 минут.</li>
+		 <li>По окончанию командной работы был создан проект <a href="asay1515.github.io/progect/index.html">"Цензор-бот"</a>.</li>
+		 <li>Для внедрения проектабыла разработана <a href="https://keklgar.github.io/Project/index.html"> страница-описание Цензор-бота</a> и команды его разработчиков.</li>
+		 
+	 </ol>
+		</div>
+ <hr>
+	<div class="box">
+  <h1 align="center">Лабораторная работа 3</h1>
+		<h4>Задачи: настроить локальную сеть.</h4>
+ <ol>
+  <h4>Выполнение:</h4>
+ <div class="container">
+	 <div align="center">
+  <ul id="slides">
+    <li class="slide showing"></li>
+    <li class="slide"></li>
+    <li class="slide"></li>
+	   <li class="slide"></li>
+	   <li class="slide"></li>
+	   <li class="slide"></li>
+	   <li class="slide"></li>
+	   <li class="slide"></li>
+	   <li class="slide"></li> 
+	  <li class="slide"></li>
+	   <li class="slide"></li>
+	   <li class="slide"></li>
+	   <li class="slide"></li>
+	   <li class="slide"></li>
+	   <li class="slide"></li>
+	   <li class="slide"></li>
+	   <li class="slide"></li>
+	   <li class="slide"></li>
+  </ul>
+	
+  <div class="buttons">
+    <button class="controls" id="previous">&lt;</button>
+
+    <button class="controls" id="pause">&#10074;&#10074;</button>
+
+    <button class="controls" id="next">&gt;</button>
+  </div></div>
+	 <br>
+	 <li>Расчёт ip-адресов 15 вариант</li>
+	<table class="box4">
+ 
+<tr>
+<th> Устройство </th>
+<th> IP-адрес </th>
+<th> Маска </th>
+  <th> Шлюз </th>
+</tr>
+
+<tr>
+ 	<td align="center"> PC0 </td>
+    <td align="center"> 192.168.15.2</td>
+	<td align="center"> 255.255.252.0 </td>            
+ 	<td align="center"> 192.168.15.1 </td>
+</tr>
+
+<tr>
+ 	<td align="center"> PC1 </td>
+    <td align="center"> 192.168.15.3 </td>
+    <td align="center"> 255.255.252.0 </td>
+    <td align="center"> 192.168.15.1 </td>
+</tr>
+<tr>
+ 	<td align="center"> PC2 </td>
+ 	<td align="center"> 172.16.15.2 </td>
+ 	<td align="center"> 255.255.255.240 </td>
+    <td align="center"> 172.16.15.1 </td>
+</tr>
+
+<tr>   
+  	<td align="center"> PC3 </td>
+  	<td align="center"> 172.16.15.3 </td>
+  	<td align="center"> 255.255.255.240 </td>      
+  	<td align="center"> 172.16.15.1 </td>   
+</tr>
+
+<tr>    
+	<td align="center"> PC4 </td>      
+	<td align="center"> 10.10.15.2 </td>    
+	<td align="center"> 255.255.255.0 </td>      
+	<td align="center"> 10.10.15.1 </td>    
+</tr>
+
+<tr>    
+	<td align="center"> R1 0/0 </td>   
+	<td align="center"> 192.168.15.1 </td>    
+	<td align="center"> 255.255.252.0 </td>   
+	 <td align="center">-</td>             
+	</tr>
+
+	<tr>    
+		<td align="center"> R1 0/1 </td>   
+		<td align="center"> 172.16.15.1 </td>     
+		<td align="center"> 255.255.255.240 </td>      
+		<td align="center"> - </td>             
+	</tr>
+
+	<tr>    
+		<td align="center"> R1 1/0 </td>   
+		<td align="center"> 15.15.15.1 </td>      
+		<td align="center"> 255.255.255.252 </td>   
+		 <td align="center"> - </td>             
+	</tr>
+
+	<tr>    
+		<td align="center"> R0 0/0 </td>   
+		<td align="center"> 10.10.15.1 </td>      
+		<td align="center"> 255.255.255.0 </td>      
+		<td align="center"> - </td>            
+	 </tr>
+
+	 <tr>    
+	 	<td align="center"> R0 0/1 </td>   
+	 	<td align="center"> 15.15.15.2 </td>      
+	 	<td align="center"> 255.255.255.252 </td>   
+	 	 <td align="center"> - </td>            
+	 </tr>
+
+</table>
+ 	 
+</div>
+	
+   <li>Создать сеть А, состоящую из коммутатора и 2-х компьютеров</li>
+	 <li>Cоздать сеть Б, состоящую из ещё одного коммутатора и двух компьтеров</li>
+	 <li>Необходимо соединить два коммутатора и проверить работоспособность сети (серьёзно??!!). Я этого не делала, так как прекрасно знаю что работать это не будет. Так как коммутатор может передавать трафик одной сети (максимум нескольких vlan). Для передачи данных из одной сети в другую необходимо устройство 3-его уровня (маршрутизатор). </li>
+  <li>Добавляем ещё один маршрутизатор, подключаем к нему сеть С, коммутатор и компьютер</li>
+	 <li>Соединяем маршрутизаторы между собой сетью 15.15.15.0/30</li>
+	 <li>После настройки сетей маршрутизатор Router1 будет маршрутизировать трафик непосредственно подключённых к нему сетей:А и Б. В сеть С пакеты доходить не будут, так как не существует маршрута до данной сети. Сеть С будет доступна только Router2.</li>
+	 <li>Чтобы это исправить настраиваем статический маршрутизацию на Router1 прописываем маршрут до сети С, а на Router2 до сетей А и Б. </li>
+	 <li>Далее настраиваем пароли на удалённый доступ и переход в привилигированный режим, устанавливаем баннеры</li>
+	 <li>Проверяем работоспособность сети</li>
+	 <li>Подключаемся по telnet к сетевым устройствам</li>
+	 <li><a href="asay1515.github.io/Lab3Shulenina.pkt">Файл выполненной третьей лабораторной работы</a></li>
+ </ol>
+</div>
+	<hr>
+ <div class="box">
+	<h1 align="center">Подготовка к экзамену</h1>
+	 <p>Пройти тесты и разработать свой вопрос</p>
+	 <h4>Выберите правильный вариант ответа</h4>
+	 <p>На каком уровне модели взаимодействия открытых систем (OSI) работают маршрутизаторы?</p>
+	 <ol>
+	 <li>Прикладной.</li>
+		 <li>Представления данных.</li>
+		 <li>Сеансовый.</li>
+		 <li>Транспортный.</li>
+		 <li>Сетевой.</li>
+		 <li>Канальный.</li>
+		 <li>Физический.</li>
+	 </ol>
+	</div>
+
+	
+	<script type="text/javascript">
+var controls = document.querySelectorAll('.controls');
+for(var i=0; i<controls.length; i++){
+	controls[i].style.display = 'inline-block';
+}
+
+var slides = document.querySelectorAll('#slides .slide');
+var currentSlide = 0;
+var slideInterval = setInterval(nextSlide,2000);
+
+function nextSlide(){
+	goToSlide(currentSlide+1);
+}
+
+function previousSlide(){
+	goToSlide(currentSlide-1);
+}
+
+function goToSlide(n){
+	slides[currentSlide].className = 'slide';
+	currentSlide = (n+slides.length)%slides.length;
+	slides[currentSlide].className = 'slide showing';
+}
+
+
+var playing = true;
+var pauseButton = document.getElementById('pause');
+
+function pauseSlideshow(){
+	pauseButton.innerHTML = '&#9658;'; // play character
+	playing = false;
+	clearInterval(slideInterval);
+}
+
+function playSlideshow(){
+	pauseButton.innerHTML = '&#10074;&#10074;'; // pause character
+	playing = true;
+	slideInterval = setInterval(nextSlide,2000);
+}
+
+pauseButton.onclick = function(){
+	if(playing){ pauseSlideshow(); }
+	else{ playSlideshow(); }
+};
+
+var next = document.getElementById('next');
+var previous = document.getElementById('previous');
+
+next.onclick = function(){
+	pauseSlideshow();
+	nextSlide();
+};
+previous.onclick = function(){
+	pauseSlideshow();
+	previousSlide();
+};
+ </script>
+
+
+</body>
+
+</html>
