--- a/IDM-18-04/Vatanieva/Index.html
+++ b/IDM-18-04/Vatanieva/Index.html
@@ -6,7 +6,7 @@
 		<meta charset = " utf-8">
 		</head>
 		<body bgcolor ="#00FFFF">
-		
+		<p> <h1 align="right" style="color:grey"> Vatanieva Shahnoz Vatanievna { IDM -18-04 } </h1></p>
 		<p> <h1 align="center" style="color:blue"> Лабораторная работа №1 </h1></p>
 	<fieldset>
 		<p> <h1 align="center" style="color:Green"> "Экосистема разработки программ с открытым кодом" </h1> </p>
