--- a/IDM-18-04/Vatanieva/Index.html
+++ b/IDM-18-04/Vatanieva/Index.html
@@ -31,10 +31,10 @@
 		<p> <h1 align="left" style="color:black"> 1. Проектирование и разработка индивидуального или коллективного веб-приложения с использованием html,css,js + json,xml </h1></p>
 		<p> <h1 align="left" style="color:black"> 2. В виде статья написать ответ на одного из экзаменационных билетов на  wiki-странице </h1></p>
         		<p> <h1 align="center" style="color:red"> Отчет по ЛР №2 </h1> </p>
-				
-			<p> <h1 align="left" style = "color:green"> 1. Website <a href="Lab1.html" > Ссылка </a> </h1></p>		
+			<p> <h1 align="left" style = "color:green"> 1. Web-проект <a href="#" > Ссылка </a> </h1></p>	
+			<p> <h1 align="left" style = "color:green"> 2. Website <a href="Lab1.html" > Ссылка </a> </h1></p>		
 	
-		<p> <h1 align="left" style = "color:green"> 2. Ссылка на статья <a href="https://github.com/Vatanieva/Vatanieva.github.io/wiki/Билет-№-27-(В.1)" > Ссылка </a> </h1></p>		
+		<p> <h1 align="left" style = "color:green"> 3. Ссылка на статья <a href="https://github.com/Vatanieva/Vatanieva.github.io/wiki/Билет-№-27-(В.1)" > Ссылка </a> </h1></p>		
  </fieldset>
 
  
