--- a/IDM-18-05/Nomerova/index.html
+++ b/IDM-18-05/Nomerova/index.html
@@ -1,1 +1,61 @@
-https://github.com/annie-kelyas/annie-kelyas.github.io
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!--
+Design by TEMPLATED
+http://templated.co
+Released for free under the Creative Commons Attribution License
+
+Name       : Coefficient 
+Description: A two-column, fixed-width design with dark color scheme.
+Version    : 1.0
+Released   : 20131117
+
+-->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title></title>
+<meta name="keywords" content="" />
+<meta name="description" content="" />
+<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
+<link href="default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+<!--[if IE 6]>
+<link href="default_ie6.css" rel="stylesheet" type="text/css" />
+<![endif]-->
+</head>
+<body>
+<div id="wrapper">
+	<div id="header-wrapper">
+		<div id="menu" class="container">
+			<p>Личная страница студентки группы ИДМ-18-05 Номеровой Анны</p>
+		</div>
+		<div id="header" class="container">
+		</div>
+	</div>
+	<div id="page" class="container">
+		<div class="column1">
+			<div class="title">
+				<h2>Лабораторная №1</h2>
+			</div>
+			<p>Создание персональной страницы-отчета на github и работа с git</p>
+		</div>
+		<div class="column2">
+			<div class="title">
+				<h2>Лабораторная №2</h2>
+			</div>
+			<p>"Разработка простого веб-приложения": Проектирование и разработка индивидуального или коллективного <a href="diplom.html" title="Ссылка на страницу приложения">веб-приложения</a> с использованием html,css,js + json,xml</p>
+		</div>
+		<div class="column3">
+			<div class="title">
+				<h2>Лабораторная №3</h2>
+			</div>
+			<p>"Настройка локальной сети передачи данных": Настройка коммутаторов и маршрутизаторов</p>
+			<img src="настройка сетей для лабы.jpg" width="80%" height="250" alt="" />
+		</div>
+	</div>
+</div>
+<div id="footer">
+	
+</div>
+</body>
+</html>
