--- a/IDM-18-05/Nomerova/index.html
+++ b/IDM-18-05/Nomerova/index.html
@@ -23,7 +23,7 @@
 				</div>
 				<div class="column2">
 					<div class="title"><h2>Лабораторная №2</h2></div>
-					<p>"Разработка простого веб-приложения": проектирование и разработка индивидуального или коллективного <a href="diplom.html" title="Ссылка на страницу приложения">веб-приложения</a> с использованием html,css,js + json,xml</p>
+					<p>"Разработка простого веб-приложения": проектирование и разработка индивидуального или коллективного <a href="scripts/diplom.html" title="Ссылка на страницу приложения">веб-приложения</a> с использованием html,css,js + json,xml</p>
 				</div>
 				<div class="column3">
 					<div class="title"><h2>Лабораторная №3</h2></div>
