--- a/IDM-18-03/Brakorenko/index.html
+++ b/IDM-18-03/Brakorenko/index.html
@@ -5,10 +5,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, height=device-height">
-    <meta name="description" content="Лабортароные работы">
-    <meta name="author" content="Бракоренко Е.">
+    <meta name="description" content="Р›Р°Р±РѕСЂС‚Р°СЂРѕРЅС‹Рµ СЂР°Р±РѕС‚С‹">
+    <meta name="author" content="Р‘СЂР°РєРѕСЂРµРЅРєРѕ Р•.">
 
-    <title>Бракоренко Екатерина ИДМ-18-03</title>
+    <title>Р‘СЂР°РєРѕСЂРµРЅРєРѕ Р•РєР°С‚РµСЂРёРЅР° РР”Рњ-18-03</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,24 +28,24 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Бракоренко Е. ИДМ-18-03</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Р‘СЂР°РєРѕСЂРµРЅРєРѕ Р•. РР”Рњ-18-03</a>
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Меню
+          РњРµРЅСЋ
           <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#otchet1">Отчёт №1</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#otchet1">РћС‚С‡С‘С‚ в„–1</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#otchet2">Отчёт №2</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#otchet2">РћС‚С‡С‘С‚ в„–2</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#otchet3">Отчёт №3</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#otchet3">РћС‚С‡С‘С‚ в„–3</a>
             </li>
 			<li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#bilet">Билет</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#bilet">Р‘РёР»РµС‚</a>
             </li>
           </ul>
         </div>
@@ -56,65 +56,65 @@
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
         <img class="img-fluid mb-5 d-block mx-auto" src="img/brok.png" alt="">
-        <h1 class="text-uppercase mb-0">Интернет-технологии</h1>
+        <h1 class="text-uppercase mb-0">РРЅС‚РµСЂРЅРµС‚-С‚РµС…РЅРѕР»РѕРіРёРё</h1>
         <hr class="star-light">
-		<h2 class="font-weight-light mb-0">Отчёты по лабораторным работам<br>от студентки Бракоренко Екатерины<br></h2>
-        <h3 class="font-weight-light mb-0">МГТУ "Станкин"</h3>
+		<h2 class="font-weight-light mb-0">РћС‚С‡С‘С‚С‹ РїРѕ Р»Р°Р±РѕСЂР°С‚РѕСЂРЅС‹Рј СЂР°Р±РѕС‚Р°Рј<br>РѕС‚ СЃС‚СѓРґРµРЅС‚РєРё Р‘СЂР°РєРѕСЂРµРЅРєРѕ Р•РєР°С‚РµСЂРёРЅС‹<br></h2>
+        <h3 class="font-weight-light mb-0">РњР“РўРЈ "РЎС‚Р°РЅРєРёРЅ"</h3>
       </div>
     </header>
 
     <section class="belij" id="otchet1">
       <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Отчёт №1</h2>
+        <h2 class="text-center text-uppercase text-secondary mb-0">РћС‚С‡С‘С‚ в„–1</h2>
         <hr class="star-dark mb-5">
-        <ul><h3>Экосистема разработки программ с открытым кодом</h3>
-		<li>Зарегистрироваться на GitHub</li>
-		<li>Подключиться к репозиторию</li>
-		<li>Создать <a href="https://github.com/wowgrechka">личную страницу пользователя</a></li>
-		<li>Создать персональную веб-страницу отчет с использованием HTML, CSS, JS.</li>
-		<li>Загрузить персональную веб-страницу отчет в репозиторий ИДМ-18 по курсу "Интернет-технологии" на Github</li>
-		<li><a href="https://github.com/wowgrechka/site">Исходный код</a></li>		
+        <ul><h3>Р­РєРѕСЃРёСЃС‚РµРјР° СЂР°Р·СЂР°Р±РѕС‚РєРё РїСЂРѕРіСЂР°РјРј СЃ РѕС‚РєСЂС‹С‚С‹Рј РєРѕРґРѕРј</h3>
+		<li>Р—Р°СЂРµРіРёСЃС‚СЂРёСЂРѕРІР°С‚СЊСЃСЏ РЅР° GitHub</li>
+		<li>РџРѕРґРєР»СЋС‡РёС‚СЊСЃСЏ Рє СЂРµРїРѕР·РёС‚РѕСЂРёСЋ</li>
+		<li>РЎРѕР·РґР°С‚СЊ <a href="https://github.com/wowgrechka">Р»РёС‡РЅСѓСЋ СЃС‚СЂР°РЅРёС†Сѓ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ</a></li>
+		<li>РЎРѕР·РґР°С‚СЊ РїРµСЂСЃРѕРЅР°Р»СЊРЅСѓСЋ РІРµР±-СЃС‚СЂР°РЅРёС†Сѓ РѕС‚С‡РµС‚ СЃ РёСЃРїРѕР»СЊР·РѕРІР°РЅРёРµРј HTML, CSS, JS.</li>
+		<li>Р—Р°РіСЂСѓР·РёС‚СЊ РїРµСЂСЃРѕРЅР°Р»СЊРЅСѓСЋ РІРµР±-СЃС‚СЂР°РЅРёС†Сѓ РѕС‚С‡РµС‚ РІ СЂРµРїРѕР·РёС‚РѕСЂРёР№ РР”Рњ-18 РїРѕ РєСѓСЂСЃСѓ "РРЅС‚РµСЂРЅРµС‚-С‚РµС…РЅРѕР»РѕРіРёРё" РЅР° Github</li>
+		<li><a href="https://github.com/wowgrechka/site">РСЃС…РѕРґРЅС‹Р№ РєРѕРґ</a></li>		
       </div>
     </section>
 
     <section class="bg-primary text-white mb-0" id="otchet2">
       <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0 text-white">Отчёт №2</h2>
+        <h2 class="text-center text-uppercase text-secondary mb-0 text-white">РћС‚С‡С‘С‚ в„–2</h2>
         <hr class="star-light mb-5">
-        <ul><h3>Разработка простого веб-приложения</h3>
-		<li>Собрать команду для разработки веб-приложения (SPA) и распределить роли. </li>
-		<li>Разработать макет страницы веб-приложения.</li>
-		<li>Прописать стили страницы.</li>
-		<li>Прописать js функционал и реализовать возможность чтения json.</li>
-		<li>Быть лучшими</a></li></ul>		
+        <ul><h3>Р Р°Р·СЂР°Р±РѕС‚РєР° РїСЂРѕСЃС‚РѕРіРѕ РІРµР±-РїСЂРёР»РѕР¶РµРЅРёСЏ</h3>
+		<li>РЎРѕР±СЂР°С‚СЊ РєРѕРјР°РЅРґСѓ РґР»СЏ СЂР°Р·СЂР°Р±РѕС‚РєРё РІРµР±-РїСЂРёР»РѕР¶РµРЅРёСЏ (SPA) Рё СЂР°СЃРїСЂРµРґРµР»РёС‚СЊ СЂРѕР»Рё. </li>
+		<li>Р Р°Р·СЂР°Р±РѕС‚Р°С‚СЊ РјР°РєРµС‚ СЃС‚СЂР°РЅРёС†С‹ РІРµР±-РїСЂРёР»РѕР¶РµРЅРёСЏ.</li>
+		<li>РџСЂРѕРїРёСЃР°С‚СЊ СЃС‚РёР»Рё СЃС‚СЂР°РЅРёС†С‹.</li>
+		<li>РџСЂРѕРїРёСЃР°С‚СЊ js С„СѓРЅРєС†РёРѕРЅР°Р» Рё СЂРµР°Р»РёР·РѕРІР°С‚СЊ РІРѕР·РјРѕР¶РЅРѕСЃС‚СЊ С‡С‚РµРЅРёСЏ json.</li>
+		<li>Р‘С‹С‚СЊ Р»СѓС‡С€РёРјРё</a></li></ul>		
 		<div>
     </section>
 
    <section class="belij" id="otchet3">
       <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Отчёт №3</h2>
+        <h2 class="text-center text-uppercase text-secondary mb-0">РћС‚С‡С‘С‚ в„–3</h2>
         <hr class="star-dark mb-5">
-        <ul><h3>Настройка локальной сети передачи данных</h3></ul>
+        <ul><h3>РќР°СЃС‚СЂРѕР№РєР° Р»РѕРєР°Р»СЊРЅРѕР№ СЃРµС‚Рё РїРµСЂРµРґР°С‡Рё РґР°РЅРЅС‹С…</h3></ul>
 		<details>
-		<summary>Отчёт</summary>
+		<summary>РћС‚С‡С‘С‚</summary>
 		</details>
       </div>
     </section>
 	
 	 <section class="bg-primary text-white mb-0" id="bilet">
       <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Подготовка к экзамену</h2>
+        <h2 class="text-center text-uppercase text-secondary mb-0">РџРѕРґРіРѕС‚РѕРІРєР° Рє СЌРєР·Р°РјРµРЅСѓ</h2>
         <hr class="star-light mb-5">
-        <ul><h3>Билет #8</h3></uL>
+        <ul><h3>Р‘РёР»РµС‚ #8</h3></uL>
 		<details>
-		<summary>Ответ:</summary>
+		<summary>РћС‚РІРµС‚:</summary>
 		</details>	
 </div>		
     </section>
 
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Типичный &copy; копирайт</small>
+        <small>РўРёРїРёС‡РЅС‹Р№ &copy; РєРѕРїРёСЂР°Р№С‚</small>
       </div>
     </div>
 
