--- a/IDM-18-04/Gusev/1lab.html
+++ b/IDM-18-04/Gusev/1lab.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
  <head>
@@ -12,7 +13,15 @@
  <body>
   <body style="color:White; background-color:#6899D3">
   <h1>1 лабораторная работа</h1>
+  <p>Был создан профиль на github</p>
   <p><a href='https://github.com/gusev-stankin-idm1804'><b>Профиль github</b></a></p>
+  <p>Github используется как хостинг</p>
   <p><a href='https://gusev-stankin-idm1804.github.io/'><b>Персональная веб-страница</b></a></p>
- </body>
+  <p>Создано разветленин репозитория курса в личный репозиторий</p>
+  <p>В репозитории курса был создан личный каталог</p>
+  <h2>Скриншоты</h2>
+  <img src="im4.png" alt="Первое изображение">
+  <img src="im5.png" alt="Второе изображение">
+  
+  </body>
 </html>
