--- a/IDM-18-01/Veselov/index.html
+++ b/IDM-18-01/Veselov/index.html
@@ -105,79 +105,7 @@ A:hover
 	color: #fff;
   
   background-size: cover;
-}
-.slide:nth-of-type(1){
-	background-color: #add8e6;
-  background-image: url ('https://asay1515.github.io/slides/01.JPG');
-}
-.slide:nth-of-type(2){
-	background-color: orange;
-  background-image: url('https://asay1515.github.io/slides/01.JPG');
-}
-.slide:nth-of-type(3){
-	background-color: green;
-  background-image: url('https://asay1515.github.io/slides/02.JPG');
-}
-	 .slide:nth-of-type(4){
-	background-color: blue;
-  background-image: url('https://asay1515.github.io/slides/03.JPG');
-}
-	 .slide:nth-of-type(5){
-	background-color: green;
-  background-image: url('https://asay1515.github.io/slides/04.JPG');
-}
-	 .slide:nth-of-type(6){
-	background-color: green;
-  background-image: url('https://asay1515.github.io/slides/05.JPG');
-}
-	 .slide:nth-of-type(7){
-	background-color: green;
-  background-image: url('https://asay1515.github.io/slides/06.JPG');
-}
-	 .slide:nth-of-type(8){
-	background-color: green;
-  background-image: url('https://asay1515.github.io/slides/07.JPG');
-}
-	 .slide:nth-of-type(9){
-	background-color: green;
-  background-image: url('https://asay1515.github.io/slides/08.JPG');
-}
-	 .slide:nth-of-type(10){
-	background-color: green;
-  background-image: url('https://asay1515.github.io/slides/09.JPG');
-}
-	 .slide:nth-of-type(11){
-	background-color: green;
-  background-image: url('https://asay1515.github.io/slides/10.JPG');
-}
-	 .slide:nth-of-type(12){
-	background-color: green;
-  background-image: url('https://asay1515.github.io/slides/11.JPG');
-}
-	 .slide:nth-of-type(13){
-	background-color: green;
-  background-image: url('https://asay1515.github.io/slides/12.JPG');
-}
-	 .slide:nth-of-type(14){
-	background-color: green;
-  background-image: url('https://asay1515.github.io/slides/13.JPG');
-}
-	 .slide:nth-of-type(15){
-	background-color: green;
-  background-image: url('https://asay1515.github.io/slides/14.JPG');
-}
-	 .slide:nth-of-type(16){
-	background-color: green;
-  background-image: url('https://asay1515.github.io/slides/15.JPG');
-}
-	 .slide:nth-of-type(17){
-	background-color: green;
-  background-image: url('https://asay1515.github.io/slides/16.JPG');
-}
-	 .slide:nth-of-type(18){
-	background-color: green;
-  background-image: url('https://asay1515.github.io/slides/17.JPG');
-}
+
 
 .controls{
   background: #333;
@@ -231,7 +159,7 @@ A:hover
       <li>Создана <a href=https://github.com/foxy1303>страница пользователя</a> на GitHub;</li>
       <li>Страница прошлого года была удалена;</li>
       <li><a href="https://github.com/asay1515/asay1515.github.io/wiki/%D0%98%D0%BD%D0%B4%D0%B8%D0%B2%D0%B8%D0%B4%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D0%BE%D0%B5-%D0%B7%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5:-%D0%94%D0%B8%D0%B0%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B0-%D0%BF%D1%80%D0%B5%D1%86%D0%B5%D0%B4%D0%B5%D0%BD%D1%82%D0%BE%D0%B2-UML">Ссылка на статью прошлого года</a></li>
-      <li>Разработа <a href="https://foxy.github.io/index.html">страница-отчет</a>;</li>
+      <li>Разработа <a href="https://foxy1303.github.io/">страница-отчет</a>;</li>
       <li>Страница выгружена в <a href="https://github.com/stankin/inet-2018/tree/master/IDM-18-01/Veselov">общий репозиторий</a>.</li>
 </ol>
  </div>
