--- a/IDM-18-01/Komissarov/index.html
+++ b/IDM-18-01/Komissarov/index.html
@@ -8,7 +8,7 @@
     <title>Отчет</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link href="styles.css" rel="stylesheet">
+    <link href="assets/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -69,36 +69,108 @@
                                     <h5 class="card-title">Бригада "УХ"</h5>
                                     <h6 class="card-subtitle mb-2 text-muted">ИДМ-18-01</h6>
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item"><a target="_blank" href="https://github.com/d1slike">Комиссаров Я.В.
+                                        <li class="list-group-item"><a target="_blank"
+                                                                       href="https://github.com/d1slike">Комиссаров Я.В.
                                             (РП, СП, БА, АД,
                                             ПП)</a></li>
-                                        <li class="list-group-item"><a target="_blank" href="https://github.com/KonstantinYaskevich">Яскевич
+                                        <li class="list-group-item"><a target="_blank"
+                                                                       href="https://github.com/KonstantinYaskevich">Яскевич
                                             К.И. (РП, СП,
                                             ПП)</a></li>
-                                        <li class="list-group-item"><a target="_blank" href="https://github.com/levich95">Усенко Л.Ю.
+                                        <li class="list-group-item"><a target="_blank"
+                                                                       href="https://github.com/levich95">Усенко Л.Ю.
                                             (СА, ПП)</a></li>
-                                        <li class="list-group-item"><a target="_blank" href="https://github.com/lihach13">Лихачев С.В.
+                                        <li class="list-group-item"><a target="_blank"
+                                                                       href="https://github.com/lihach13">Лихачев С.В.
                                             (НИ, БА)</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </li>
-                        <object class="pdf-view" data="msk_sport.pdf" type="application/pdf" width="100%" height="700"></object>
+                        <object class="pdf-view" data="msk_sport.pdf" type="application/pdf" width="100%"
+                                height="700"></object>
                     </ul>
                 </div>
                 <div class="tab-pane fade" id="lab3" role="tabpanel" aria-labelledby="lab3-tab">
                     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
                         <h1 class="h2">Лабораторная работа #3</h1>
+                        <em>
+                            Вариант 13
+                        </em>
                     </div>
+                    <ol>
+                        <h1 class="h2">Расчет диапазонов подсетей</h1>
+                        <p class="screen"><img src="assets/img/im1.png"></p>
+                        <h3 class="h3">1) Разместить на рабочем поле коммутатор и два компьютера и соединить их</h3>
+                        <img src="assets/img/1.png">
+                        <h3 class="h3">2) Подключить консольный кабель для настройки оборудования</h3>
+                        <h3 class="h3">3) Настроить адресацию на добавленных компьютерах</h3>
+                        <p>PC0:</p>
+                        <img src="assets/img/2.png">
+                        <p>PC1:</p>
+                        <img src="assets/img/3.png">
+                        <h3 class="h3">4) Выполнить проверку работоспособности сети</h3>
+                        <img src="assets/img/4.png">
+                        <h3 class="h3">5) Добавить на рабочее поле еще один коммутатор с двумя компьютерами и настроить адресацию
+                            из другой подсети</h3>
+                        <img src="assets/img/5.png">
+                        <p>PC3:</p>
+                        <img src="assets/img/6.png">
+                        <p>PC4:</p>
+                        <img src="assets/img/7.png">
+                        <h3 class="h3">6) Соединить коммутаторы между собой и проверить работоспособность сети</h3>
+                        <img src="assets/img/10.png">
+                        <h3 class="h3">7) В случае неработоспособности сети объяснить причин</h3>
+                        <h3 class="h3">8) Добавить маршрутизатор на рабочее поле</h3>
+                        <img src="assets/img/11.png">
+                        <h3 class="h3">9) Настроить интерфейсы маршрутизатора для существующих подсетей</h3>
+                        <img src="assets/img/12.png">
+                        <h3 class="h3">10) Проверить работоспособность сети</h3>
+                        <img src="assets/img/13.png">
+                        <h3 class="h3">11) В случае неработоспособности сети объяснить причины</h3>
+                        <h3 class="h3">12) Указать шлюз по умолчанию и отправить сообщение</h3>
+                        <img src="assets/img/13.png">
+                        <h3 class="h3">13) Добавить на рабочее поле еще один маршрутизатор</h3>
+                        <img src="assets/img/14.png">
+                        <h3 class="h3">14) Подключить к нему коммутатор и компьютер</h3>
+                        <img src="assets/img/15.png">
+                        <h3 class="h3">15) Настроить сетевые настройки согласно таблице ниже</h3>
+                        <img src="assets/img/16.png">
+                        <h3 class="h3">16) Соединить между маршрутизаторы и настроить между ними сеть с префиксом /30</h3>
+                        <img src="assets/img/166.png">
+                        <h3 class="h3">17) Проверить работоспособность сети, отправив сообщение сети A в сеть С и из сети В в сеть
+                            С</h3>
+                        <img src="assets/img/17.png">
+                        <h3 class="h3">18) В случае неработоспособности сети объяснить причины</h3>
+                        <h3 class="h3">19) Настроить статическую маршрутизацию между сетями</h3>
+                        <img src="assets/img/18.png">
+                        <br> <br>
+                        <img src="assets/img/19.png">
+                        <h3 class="h3">20) Настроить на сетевых устройствах пароли для привилегированного режима</h3>
+                        <img src="assets/img/20.png">
+                        <h3 class="h3">21) Настроить пароли на сетевых устройствах пароли на подключение через консоль и
+                            telnet</h3>
+                        <img src="assets/img/21.png">
+                        <h3 class="h3">22) Установить баннер на сетевое оборудование</h3>
+                        <img src="assets/img/22.png">
+                        <h3 class="h3">23) Проверить работу удаленного подключения</h3>
+                        <img src="assets/img/23.png">
+                    </ol>
                 </div>
                 <div class="tab-pane fade" id="exam" role="tabpanel" aria-labelledby="exam-tab">
                     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
                         <h1 class="h2">Подготовка к экзамену</h1>
                     </div>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Результат теста "Инновации": <a target="_blank" href="https://docs.google.com/spreadsheets/d/1iZ7gLvnKfSx3TUTjl_-gCtDQ66B1JlkO4WZaMj6R0sw/edit#gid=1373642912&range=AB15">86%</a></li>
-                        <li class="list-group-item">Рузультат теста "Проекты": <a target="_blank" href="https://docs.google.com/spreadsheets/d/1iZ7gLvnKfSx3TUTjl_-gCtDQ66B1JlkO4WZaMj6R0sw/edit#gid=1682100065&range=AD15">83%</a></li>
-                        <li class="list-group-item"><a target="_blank" href="https://github.com/stankin/inet-2018/wiki/%D0%91%D0%B8%D0%BB%D0%B5%D1%82-19">Ответ на билет 19</a></li>
+                        <li class="list-group-item">Результат теста "Инновации": <a target="_blank"
+                                                                                    href="https://docs.google.com/spreadsheets/d/1iZ7gLvnKfSx3TUTjl_-gCtDQ66B1JlkO4WZaMj6R0sw/edit#gid=1373642912&range=AB15">86%</a>
+                        </li>
+                        <li class="list-group-item">Рузультат теста "Проекты": <a target="_blank"
+                                                                                  href="https://docs.google.com/spreadsheets/d/1iZ7gLvnKfSx3TUTjl_-gCtDQ66B1JlkO4WZaMj6R0sw/edit#gid=1682100065&range=AD15">83%</a>
+                        </li>
+                        <li class="list-group-item"><a target="_blank"
+                                                       href="https://github.com/stankin/inet-2018/wiki/%D0%91%D0%B8%D0%BB%D0%B5%D1%82-19">Ответ
+                            на билет 19</a></li>
                     </ul>
                 </div>
             </div>
