--- a/IDM-18-01/Veselov/index.html
+++ b/IDM-18-01/Veselov/index.html
@@ -243,7 +243,7 @@ A:hover
 	<hr>
  <div class="box">
 	<h1 align="center">Подготовка к экзамену</h1>
-	 <li>Написана <a href="https://github.com/stankin/inet-2018/wiki/%D0%91%D0%B8%D0%BB%D0%B5%D1%82-8">wiki-статья</a> 8 билета </li>
+	 <li>Написана <a href="https://github.com/foxy1303/foxy1303.github.io/wiki/%D0%91%D0%B8%D0%BB%D0%B5%D1%82-8">wiki-статья</a> 8 билета </li>
 
 	<script type="text/javascript">
 var controls = document.querySelectorAll('.controls');
