--- a/IDM-18-01/Bulychev/index.html
+++ b/IDM-18-01/Bulychev/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="Комиссаров Я.В.">
     <title>Отчет</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -54,7 +53,7 @@
 					<li>Зарегистрироваться на GitHub.</li>
 					<li>Подключиться к общему репозиторию Inet-2018.</li>
 					<li>Разработать личную страницу-отчет.</li>
-					<li>Написать wiki-статью по 8 билету 2 вопрос.</li>
+					<li>Написать wiki-статью по 6 билету.</li>
 				</ol>
 			</div>
 			<div><h4>Выполнение работы:</h4><div>
