--- a/IDM-18-01/Bulychev/index.html
+++ b/IDM-18-01/Bulychev/index.html
@@ -172,7 +172,7 @@
 					<li>
 		<p>Соединить коммутаторы между собой и проверить работоспособность сети (Не работает, так как коммутаторы подсоединяются только к маршрутизаторам</p>
 		<div>
-			<p align="center"> <img src="images/Шаг3.png">
+			<p align="center"> <img src="images/шаг3.png">
 		</p>
 		</div>
 		</li>
