--- a/IDM-18-05/Kovyazina/index.html
+++ b/IDM-18-05/Kovyazina/index.html
@@ -46,13 +46,13 @@
 
 										<strong>Экосистема разработки программ с открытым кодом </strong><br/><br>
 										<div class="t-left" style="padding-top: 10px;">
-<span>1. Регистрация на GitHub.</span><br>
-<span>2. Подключение к репозиторию.</span><br>
-<span>3. Создание личной страницы.</span><br>
-<span>4. Размещение кода исходной страницы в репозитории.</span><br>
-<span>5. Размещение странички на хостинге.</span><br/><br>
-																			</div>
-</div>
+											<span>1. Регистрация на GitHub.</span><br>
+											<span>2. Подключение к репозиторию.</span><br>
+											<span>3. Создание личной страницы.</span><br>
+											<span>4. Размещение кода исходной страницы в репозитории.</span><br>
+											<span>5. Размещение странички на хостинге.</span><br/><br>
+																														</div>
+										</div>
 								</div>
 							</div>
 						</div>
@@ -64,7 +64,7 @@
 						<div class="col-1-2 f-right">
 							<div class="wrap-col">
 								<div style="padding-top: 60px;">
-									<center><img src="images/009.jpg"></center>
+									<center><img src="images/109.jpg"></center>
 								</div>
 							</div>
 						</div>
@@ -75,9 +75,9 @@
 										<div class="header">
 											<h2>Лабораторная работа 2</h2>
 										</div>
-										<strong> Разработка простого веб-приложения</strong><br/><br>
-										<span>Приложение будет размещено по ссылке ниже</span><br/><br>
-										<a href="#" class="button" >Ссылка</a>
+										<strong> Разработка простого IOS-приложения</strong><br/><br>
+										<span>Приложение размещено по ссылке ниже</span><br/><br>
+										<a href="https://github.com/KlockDev/GameJackFirst/tree/master/SpriteKitTest" class="button" >Ссылка</a>
 									</div>
 								</div>
 							</div>
@@ -118,20 +118,19 @@
 				</section>
 				<section class="content-box background-white box-2 zerogrid">
 					<div class="row wrap-box"><!--Start Box-->
-						<div class="col-1-2">
+						
 							<div class="wrap-col">
 								<div class="row">
 									<div class="t-center" style="padding-top: 30px;">
 										<div class="header">
 											<h2>Билет</h2>
 										</div>
-										<strong> </strong><br/><br>
-										<span>Билет будет описан по ссылке ниже</span><br/><br>
-										<a href="#" class="button" >Ссылка</a>
+										<span>Ответ на экзаменационный билет расположен по ссылке</span><br/><br>
+										<a href="https://github.com/stankin/inet-2018/wiki/%D0%91%D0%B8%D0%BB%D0%B5%D1%82-17" class="button" >Ссылка</a>
 									</div>
 								</div>
 							</div>
-						</div>
+						
 					</div>
 				</section>
 				<!-----------------content-box-4-------------------->
