--- a/IDM-18-03/Frolov/index.html
+++ b/IDM-18-03/Frolov/index.html
@@ -214,6 +214,19 @@ $(document).ready(function(){
         <ul><h3>Настройка локальной сети передачи данных</h3></ul>
 		<details>
 		<summary>Отчёт</summary>
+			<ul><h3>Вариант 5</h3>
+				<li>Условие<br>
+				<img src="IMG/1.png"></li>
+				<li>Сеть<br>
+				<img src="IMG/2.png"></li>
+				<li>Настройки компьютеров<br>
+				<img src="IMG/3.png"><br>
+				<img src="IMG/4.png"><br>
+				<img src="IMG/5.png"><br>
+				<img src="IMG/6.png"><br>
+				<img src="IMG/7.png"><br></li>
+				<li>Проверка сети<br>
+				<img src="IMG/8.png"></li></ul>
 		</details>	
 		</div>
       <div class="modal-footer">
@@ -240,6 +253,7 @@ $(document).ready(function(){
         <ul><h3>Билет #8</h3></uL>
 		<details>
 		<summary>Ответ:</summary>
+		<a href="https://github.com/stankin/inet-2018/wiki/%D0%91%D0%B8%D0%BB%D0%B5%D1%82-8" target="_blank">Билет №8</a>
 		</details>			
 		</div>
       <div class="modal-footer">
